# funkshun

./: .travis.yml  LICENSE  avl.scm  extremeware_brute_SUITE.erl  game.scm  impldep.scm  main.hs  utils.scm
cpu-burner/: README  main.ss
eggbnc/: README.mkd  backup.sh  cleanup.sh  eggbnc.erl
eggbnc/v2/: README.mkd  eggbnc.erl  leave.sh
erlbnc/: erlbnc.erl
extremeware-brute/: Makefile  README  extremeware_brute_SUITE.cfg  extremeware_brute_SUITE.erl  extremeware_brute_SUITE2.cfg  extremeware_brute_SUITE2.erl  run.sh  ssh-ewcompat.diff
extremeware-brute/ssh/: README  README.mkd  extremeware_brute.es
extremeware-brute/telnet/: extremeware_brute_SUITE.cfg  extremeware_brute_SUITE.erl  run.sh
gofish/: game.scm  impldep.scm  strategies.scm  utils.scm
hakyll-gallery/: hakyll-gallery.cabal
hakyll-gallery/src/Hakyll/: Gallery.hs
hasgen/: hasgen.cabal  hasgen.hs
ipxerlay/: README.mkd  ipxerlay.lfe  run.sh
ngranek/: README.mkd  ngranek.erl  ngranek.jxa
